--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Kasteelpark Arenberg 10, bus 2446,<br />
 B-3001 Leuven, Belgium<br />
 Office B00.15<br />
 Tel: +32 16374445<br />
-Email: <span><a href="http://www.google.com/recaptcha/mailhide/d?k=01WtxpoyMm-W17lJau3L7bVg==&amp;c=C3hmpzK4SPtLAc1ujiuRay9px0LSG-0KtV5Qlc7UGnY=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01WtxpoyMm-W17lJau3L7bVg\x3d\x3d\x26c\x3dC3hmpzK4SPtLAc1ujiuRay9px0LSG-0KtV5Qlc7UGnY\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">click here</a></span></p>
+Email: panos.patrinos@esat.kuleuven.be</p>
 </td></tr></table>
 <h2>About me</h2>
 <p>Panagiotis (Panos) Patrinos is assistant professor at the <a href="https://www.esat.kuleuven.be/english">Department of Electrical Engineering (ESAT)</a> of <a href="https://kuleuven.be/">KU Leuven</a>, Belgium. In 2014 he was a visiting professor at  <a href="https://ee.stanford.edu">Stanford</a>. He received his PhD in Control and Optimization, M.S. in Applied Mathematics and M.Eng. from the <a href="https://www.ntua.gr/en/">National Technical University of Athens</a> in 2010, 2005 and 2003, respectively. After his PhD he held postdoc positions at the University of Trento and IMT Lucca, Italy, where he became an assistant professor in 2012. His current research interests are in the theory and algorithms of structured convex and nonconvex optimization and predictive control with a focus on large-scale, distributed, stochastic and embedded optimization and a wide range of application areas including automotive, aerospace, machine learning, signal processing and energy. </p>
