--- a/publications.html
+++ b/publications.html
@@ -46,6 +46,18 @@ F. de la Hucha Arce, P. Patrinos, M. Verhelst, A. Bertrand</p>
 International Journal Of Circuit Theory And Applications<br />
 A. Lekic, B. Hermans, N. Jovicic, P. Patrinos</p>
 </li>
+<li><p><a href="OpEn:">Code generation for embedded nonconvex optimization</a>
+21st IFAC World Congress, 2020<br />
+P. Sopasakis, E. Fresk, and P. Patrinos</p>
+</li>
+<li><p><a href="Learning-based">distributionally robust model predictive control for adaptive cruise control with stochastic driver models</a><br />
+21st IFAC World Congress, 2020<br />
+M. Schuurmans, A. Katriniok, H. Tseng, P. Patrinos</p>
+</li>
+<li><p><a href="A">new heuristic approach for low-thrust spacecraft trajectory optimization</a><br />
+21st IFAC World Congress, 2020<br />
+P. Coppens, B. Hermans, J. Vandersteen, G. Pipeleers, and P. Patrinos</p>
+</li>
 </ul>
 <h3>2019</h3>
 <ul>
