--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@ F. de la Hucha Arce, P. Patrinos, M. Verhelst, A. Bertrand</p>
 International Journal Of Circuit Theory And Applications<br />
 A. Lekic, B. Hermans, N. Jovicic, P. Patrinos</p>
 </li>
-<li><p><a href="">OpEn: Code generation for embedded nonconvex optimization</a>
+<li><p><a href="">OpEn: Code generation for embedded nonconvex optimization</a><br />
 21st IFAC World Congress, 2020<br />
 P. Sopasakis, E. Fresk, and P. Patrinos</p>
 </li>
