--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,10 @@
 </div>
 <h3>2020</h3>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/1912.09990.pdf">Data-driven distributionally robust LQR with multiplicative noise</a><br />
+2nd Learning for Decision &amp; Control (L4DC) Conference, UC Berkeley, CA<br />
+P. Coppens, M. Schuurmans, P. Patrinos</p>
+</li>
 <li><p><a href="https://arxiv.org/abs/1709.05747">Douglas-Rachford splitting and ADMM for nonconvex optimization: tight convergence results</a><br />
 SIAM Journal on Optimization,vol. 30, no. 1, pp. 149–181, 2020<br />
 A. Themelis, P. Patrinos</p>
@@ -42,7 +46,7 @@ A. Themelis, P. Patrinos</p>
 IEEE Signal Processing Letters (accepted)<br />
 F. de la Hucha Arce, P. Patrinos, M. Verhelst, A. Bertrand</p>
 </li>
-<li><p><a href="https://lirias.kuleuven.be/2934623?limo=0">Microsecond nonlinear model predictive control for DC-DC converters</a><br />
+<li><p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cta.2737">Microsecond nonlinear model predictive control for DC-DC converters</a><br />
 International Journal Of Circuit Theory And Applications<br />
 A. Lekic, B. Hermans, N. Jovicic, P. Patrinos</p>
 </li>
@@ -61,9 +65,6 @@ P. Coppens, B. Hermans, J. Vandersteen, G. Pipeleers, and P. Patrinos</p>
 </ul>
 <h3>2019</h3>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/1912.09990.pdf">Data-driven distributionally robust LQR with multiplicative noise</a><br />
-P. Coppens, M. Schuurmans, P. Patrinos</p>
-</li>
 <li><p><a href="https://arxiv.org/pdf/1911.02934.pdf">QPALM: A Newton-type Proximal Augmented Lagrangian Method for Quadratic Programs</a><br />
 in 58th IEEE Conference on Decision and Control (CDC), Nice, France, 2019<br />
 B. Hermans, A. Themelis, P. Patrinos</p>
