--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@ F. de la Hucha Arce, P. Patrinos, M. Verhelst, A. Bertrand</p>
 International Journal Of Circuit Theory And Applications<br />
 A. Lekic, B. Hermans, N. Jovicic, P. Patrinos</p>
 </li>
-<li><p><a href="">OpEn: Code generation for embedded nonconvex optimization</a><br />
+<li><p><a href="https://arxiv.org/pdf/2003.00292.pdf">OpEn: Code generation for embedded nonconvex optimization</a><br />
 21st IFAC World Congress, 2020<br />
 P. Sopasakis, E. Fresk, and P. Patrinos</p>
 </li>
