--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,9 @@
 </div>
 <h3>2020</h3>
 <ul>
+<li><p><a href="">A quadratically convergent proximal algorithm for nonnegative tensor decomposition</a><br />
+N. Vervliet, A. Themelis, P. Patrinos, and L. De Lathauwer</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/1912.09990.pdf">Data-driven distributionally robust LQR with multiplicative noise</a><br />
 2nd Learning for Decision &amp; Control (L4DC) Conference, UC Berkeley, CA<br />
 P. Coppens, M. Schuurmans, P. Patrinos</p>
