--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
 </div>
 <h3>2020</h3>
 <ul>
-<li><p><a href="">A quadratically convergent proximal algorithm for nonnegative tensor decomposition</a><br />
+<li><p><a href="https://arxiv.org/pdf/2003.03502.pdf">A quadratically convergent proximal algorithm for nonnegative tensor decomposition</a><br />
 N. Vervliet, A. Themelis, P. Patrinos, and L. De Lathauwer</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/1912.09990.pdf">Data-driven distributionally robust LQR with multiplicative noise</a><br />
