--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,9 @@
 <li><p><a href="https://arxiv.org/pdf/2003.03502.pdf">A quadratically convergent proximal algorithm for nonnegative tensor decomposition</a><br />
 N. Vervliet, A. Themelis, P. Patrinos, and L. De Lathauwer</p>
 </li>
+<li><p><a href="https://arxiv.org/pdf/2003.03963.pdf">A block inertial Bregman proximal algorithm for nonsmooth nonconvex problems</a><br />
+M. Ahookhosh, N. Gillis and P. Patrinos</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/1912.09990.pdf">Data-driven distributionally robust LQR with multiplicative noise</a><br />
 2nd Learning for Decision &amp; Control (L4DC) Conference, UC Berkeley, CA<br />
 P. Coppens, M. Schuurmans, P. Patrinos</p>
