--- a/publications.html
+++ b/publications.html
@@ -49,11 +49,11 @@ SIAM Journal on Optimization,vol. 30, no. 1, pp. 149–181, 2020<br />
 A. Themelis, P. Patrinos</p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/abstract/document/8962239">On the convexity of bit depth allocation for linear MMSE estimation in wireless sensor networks</a><br />
-IEEE Signal Processing Letters (accepted)<br />
+IEEE Signal Processing Letters, vol. 27, pp. 291-295, 2020<br />
 F. de la Hucha Arce, P. Patrinos, M. Verhelst, A. Bertrand</p>
 </li>
 <li><p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cta.2737">Microsecond nonlinear model predictive control for DC-DC converters</a><br />
-International Journal Of Circuit Theory And Applications<br />
+International Journal Of Circuit Theory And Applications, vol. 48, no. 3, pp. 406-419, 2020<br />
 A. Lekic, B. Hermans, N. Jovicic, P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2003.00292.pdf">OpEn: Code generation for embedded nonconvex optimization</a><br />
