--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,9 @@
 </div>
 <h3>2020</h3>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/2004.00083.pdf">A new envelope function for nonsmooth DC optimization</a><br />
+A. Themelis, B. Hermans and P. Patrinos</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/2003.03502.pdf">A quadratically convergent proximal algorithm for nonnegative tensor decomposition</a><br />
 N. Vervliet, A. Themelis, P. Patrinos, and L. De Lathauwer</p>
 </li>
