--- a/publications.html
+++ b/publications.html
@@ -37,8 +37,14 @@
 <li><p><a href="https://arxiv.org/pdf/2004.00083.pdf">A new envelope function for nonsmooth DC optimization</a><br />
 A. Themelis, B. Hermans and P. Patrinos</p>
 </li>
+<li><p><a href="ftp://ftp.esat.kuleuven.be/pub/SISTA/pcoppens/CDC_2020/cdc2020pcoppens.pdf">Sample complexity of data-driven stochastic LQR with multiplicative uncertainty</a><br />
+P. Coppens and P. Patrinos</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/2003.03502.pdf">A quadratically convergent proximal algorithm for nonnegative tensor decomposition</a><br />
 N. Vervliet, A. Themelis, P. Patrinos, and L. De Lathauwer</p>
+</li>
+<li><p><a href="https://homes.esat.kuleuven.be/~abertran/reports/JWmaxSPIR2020.pdf">Multi-pattern recognition through maximization of signal-to-peak-interference ratio with application to neural spike sorting</a><br />
+J. Wouters, P. Patrinos, F. Kloosterman and A. Bertrand</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2003.03963.pdf">A block inertial Bregman proximal algorithm for nonsmooth nonconvex problems</a><br />
 M. Ahookhosh, N. Gillis and P. Patrinos</p>
