--- a/publications.html
+++ b/publications.html
@@ -46,8 +46,8 @@ N. Vervliet, A. Themelis, P. Patrinos, and L. De Lathauwer</p>
 <li><p><a href="https://homes.esat.kuleuven.be/~abertran/reports/JWmaxSPIR2020.pdf">Multi-pattern recognition through maximization of signal-to-peak-interference ratio with application to neural spike sorting</a><br />
 J. Wouters, P. Patrinos, F. Kloosterman and A. Bertrand</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2003.03963.pdf">A block inertial Bregman proximal algorithm for nonsmooth nonconvex problems</a><br />
-M. Ahookhosh, N. Gillis and P. Patrinos</p>
+<li><p><a href="https://arxiv.org/pdf/2003.03963.pdf">A block inertial Bregman proximal algorithm for nonsmooth nonconvex problems with application to symmetric nonnegative matrix tri-factorization</a><br />
+M. Ahookhosh, L.T.K. Hien, N. Gillis and P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/1912.09990.pdf">Data-driven distributionally robust LQR with multiplicative noise</a><br />
 2nd Learning for Decision &amp; Control (L4DC) Conference, UC Berkeley, CA<br />
@@ -69,7 +69,7 @@ A. Lekic, B. Hermans, N. Jovicic, P. Patrinos</p>
 21st IFAC World Congress, 2020<br />
 P. Sopasakis, E. Fresk, and P. Patrinos</p>
 </li>
-<li><p><a href="">Learning-based distributionally robust model predictive control for adaptive cruise control with stochastic driver models</a><br />
+<li><p><a href="https://arxiv.org/pdf/2005.02646.pdf">Learning-based distributionally robust model predictive control for adaptive cruise control with stochastic driver models</a><br />
 21st IFAC World Congress, 2020<br />
 M. Schuurmans, A. Katriniok, H. Tseng, P. Patrinos</p>
 </li>
@@ -80,11 +80,11 @@ P. Coppens, B. Hermans, J. Vandersteen, G. Pipeleers, and P. Patrinos</p>
 </ul>
 <h3>2019</h3>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/1911.02934.pdf">QPALM: A Newton-type Proximal Augmented Lagrangian Method for Quadratic Programs</a><br />
+<li><p><a href="https://arxiv.org/pdf/1911.02934.pdf">QPALM: A Newton-type proximal augmented Lagrangian method for quadratic programs</a><br />
 in 58th IEEE Conference on Decision and Control (CDC), Nice, France, 2019<br />
 B. Hermans, A. Themelis, P. Patrinos</p>
 </li>
-<li><p><a href="https://arxiv.org/abs/1809.06062">Risk-Averse Model Predictive Operation Control of Islanded Microgrids</a><br />
+<li><p><a href="https://arxiv.org/abs/1809.06062">Risk-averse model predictive operation control of islanded microgrids</a><br />
 IEEE Transactions on Control Systems Technology<br />
 C.A. Hans, P. Sopasakis, J. Raisch, C. Reincke-Collon, P. Patrinos</p>
 </li>
@@ -92,16 +92,16 @@ C.A. Hans, P. Sopasakis, J. Raisch, C. Reincke-Collon, P. Patrinos</p>
 P. Latafat, A. Themelis, P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/1908.01402.pdf">Multi-block Bregman proximal alternating linearized minimization and its application to sparse orthogonal nonnegative matrix factorization</a><br />
-M. Ahookhosh, L.T.K Hien, N. Gillis, P. Patrinos</p>
+M. Ahookhosh, L.T.K. Hien, N. Gillis, P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/1905.11904.pdf">Bregman forward-backward splitting for nonconvex composite optimization: superlinear convergence to nonisolated critical points</a><br />
 M. Ahookhosh, A. Themelis, P. Patrinos</p>
 </li>
-<li><p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8756205">Optimal Dynamic Spectrum Management Algorithms for Multi-User Full-Duplex DSL</a><br />
+<li><p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8756205">Optimal dynamic spectrum management algorithms for multi-user full-duplex DSL</a><br />
 IEEE Access, vol. 7, pp. 106600-106616, 2019<br />
 J Verdyck, W Lanneer, P Tsiaflakis, W Coomans, P Patrinos, M Moonen</p>
 </li>
-<li><p><a href="https://arxiv.org/abs/1903.12091">Nonlinear Model Predictive Control for Distributed Motion Planning in Road Intersections Using PANOC</a><br />
+<li><p><a href="https://arxiv.org/abs/1903.12091">Nonlinear model predictive control for distributed motion planning in road intersections using PANOC</a><br />
 in 58th IEEE Conference on Decision and Control (CDC), Nice, France, 2019<br />
 A. Katriniok, M. Schuurmans, P. Sopasakis, P. Patrinos</p>
 </li>
