--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,10 @@
 </div>
 <h3>2020</h3>
 <ul>
+<li><p><a href="https://arxiv.org/abs/1903.01818">Inertial Block Mirror Descent Method for Non-Convex Non-Smooth Optimization</a><br />
+37th International Conference on Machine Learning (ICML)<br />
+L.T.K Hien, N. Gillis, P. Patrinos</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/2004.00083.pdf">A new envelope function for nonsmooth DC optimization</a><br />
 A. Themelis, B. Hermans and P. Patrinos</p>
 </li>
@@ -41,6 +45,7 @@ A. Themelis, B. Hermans and P. Patrinos</p>
 P. Coppens and P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2003.03502.pdf">A quadratically convergent proximal algorithm for nonnegative tensor decomposition</a><br />
+28th European Signal Processing Conference (EUSIPCO)<br />
 N. Vervliet, A. Themelis, P. Patrinos, and L. De Lathauwer</p>
 </li>
 <li><p><a href="https://homes.esat.kuleuven.be/~abertran/reports/JWmaxSPIR2020.pdf">Multi-pattern recognition through maximization of signal-to-peak-interference ratio with application to neural spike sorting</a><br />
@@ -120,9 +125,6 @@ P. Latafat, N. Freris, and P. Patrinos</p>
 <li><p><a href="https://arxiv.org/abs/1803.05256">Newton-type alternating minimization algorithm for convex optimization</a><br />
 IEEE Transactions on Automatic Control, vol. 64, no. 2, pp. 697-711, 2019<br />
 L. Stella, A. Themelis, P. Patrinos</p>
-</li>
-<li><p><a href="https://arxiv.org/abs/1903.01818">Inertial Block Mirror Descent Method for Non-Convex Non-Smooth Optimization</a><br />
-L.T.K Hien, N. Gillis, P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/abs/1704.00342">Risk-averse model predictive control</a><br />
 Automatica, vol. 100, pp. 281-289, 2019<br />
