--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ try {
 <table class="imgtable"><tr><td>
 <a href="https://homes.esat.kuleuven.be/~sistawww/it/stadiusdb/img/individuals/patrinos.jpg"><img src="https://homes.esat.kuleuven.be/~sistawww/it/stadiusdb/img/individuals/patrinos.jpg" alt="alt text" width="191px" height="291px" /></a>&nbsp;</td>
 <td align="left"><p><b>Panos Patrinos</b><br />
-Assistant Professor,<br />
+Associate Professor,<br />
 Optimization, Systems and Control<br /><br />
 <a href="https://www.kuleuven.be/english/">KU Leuven</a><br />
 <a href="https://www.esat.kuleuven.be/english/overview">Dept. Electrical Engineering (ESAT)</a><br />
