--- a/people.html
+++ b/people.html
@@ -33,21 +33,25 @@
 <div id="subtitle"><a href="https://www.esat.kuleuven.be/english/overview">Department of Electrical Engineering (ESAT)</a>, <a href="https://www.kuleuven.be/english/">KU Leuven</a></div>
 </div>
 <h3>Current Postdocs</h3>
-<p><a href="https://www.kuleuven.be/wieiswie/en/person/00121933">Masoud Ahookhosh</a><br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00112523">Andreas Themelis</a><br /></p>
+<p><a href="https://www.kuleuven.be/wieiswie/en/person/00112523">Andreas Themelis</a><br />
+<a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a><br /></p>
 <h3>Current PhD students</h3>
-<p><a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a><br />
+<p><a href="https://www.kuleuven.be/wieiswie/en/person/00104969">Peter Coppens</a><br />
+Brecht Evens<br />
+<a href="https://www.kuleuven.be/wieiswie/en/person/00104126">Ben Hermans</a><br />
+Robin Kenis<br />
 <a href="https://www.kuleuven.be/wieiswie/en/person/00110604">Mathijs Schuurmans</a><br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00104969">Peter Coppens</a><br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00104126">Ben Hermans</a> (co-promotor)<br />
 <a href="https://www.kuleuven.be/wieiswie/en/person/00131918">Francesco Tonin</a> (co-promotor)<br /></p>
 <h3>Current master students</h3>
-<p>Brecht Evens<br />
+<p>Pieter Pas<br />
+Matteo Janssen<br />
 Jan Scheers<br /></p>
 <h3>Former Postdocs</h3>
-<p><a href="https://alphaville.github.io">Pantelis Sopasakis</a></p>
+<p><a href="https://alphaville.github.io">Pantelis Sopasakis</a>
+<a href="https://uclouvain.be/fr/repertoires/masoud.ahookhosh">Masoud Ahookhosh</a><br /></p>
 <h3>Former PhD students</h3>
-<p><a href="https://www.kuleuven.be/wieiswie/en/person/00112523">Andreas Themelis</a><br />
+<p><a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a><br />
+<a href="https://www.kuleuven.be/wieiswie/en/person/00112523">Andreas Themelis</a><br />
 <a href="https://lostella.github.io">Lorenzo Stella</a>, Amazon<br />
 Alberto Guiggiani, Ferrari<br /></p>
 </td>
