--- a/publications.html
+++ b/publications.html
@@ -34,14 +34,23 @@
 </div>
 <h3>2020</h3>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/2005.10230.pdf">Douglas-Rachford splitting and ADMM for nonconvex optimization: Accelerated and Newton-type algorithms</a><br />
+A. Themelis, L. Stella, P. Patrinos</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/2009.04422">Learning-Based Distributionally Robust Model Predictive Control of Markovian Switching Systems with Guaranteed Stability and Recursive Feasibility</a><br />
+59th IEEE Conference on Decision and Control (CDC), 2020<br />
+M. Schuurmans, P. Patrinos</p>
+</li>
 <li><p><a href="https://arxiv.org/abs/1903.01818">Inertial Block Mirror Descent Method for Non-Convex Non-Smooth Optimization</a><br />
 37th International Conference on Machine Learning (ICML)<br />
 L.T.K Hien, N. Gillis, P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2004.00083.pdf">A new envelope function for nonsmooth DC optimization</a><br />
+59th IEEE Conference on Decision and Control (CDC), 2020<br />
 A. Themelis, B. Hermans and P. Patrinos</p>
 </li>
 <li><p><a href="ftp://ftp.esat.kuleuven.be/pub/SISTA/pcoppens/CDC_2020/cdc2020pcoppens.pdf">Sample complexity of data-driven stochastic LQR with multiplicative uncertainty</a><br />
+59th IEEE Conference on Decision and Control (CDC), 2020<br />
 P. Coppens and P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2003.03502.pdf">A quadratically convergent proximal algorithm for nonnegative tensor decomposition</a><br />
@@ -78,7 +87,7 @@ P. Sopasakis, E. Fresk, and P. Patrinos</p>
 21st IFAC World Congress, 2020<br />
 M. Schuurmans, A. Katriniok, H. Tseng, P. Patrinos</p>
 </li>
-<li><p><a href="">A new heuristic approach for low-thrust spacecraft trajectory optimization</a><br />
+<li><p><a href="https://limo.libis.be/primo-explore/fulldisplay?docid=LIRIAS3004985&amp;context=L&amp;vid=Lirias&amp;search_scope=Lirias&amp;tab=default_tab&amp;lang=en_US&amp;fromSitemap=1">A new heuristic approach for low-thrust spacecraft trajectory optimization</a><br />
 21st IFAC World Congress, 2020<br />
 P. Coppens, B. Hermans, J. Vandersteen, G. Pipeleers, and P. Patrinos</p>
 </li>
