--- a/people.html
+++ b/people.html
@@ -47,7 +47,7 @@ Robin Kenis<br />
 Matteo Janssen<br />
 Jan Scheers<br /></p>
 <h3>Former Postdocs</h3>
-<p><a href="https://alphaville.github.io">Pantelis Sopasakis</a>
+<p><a href="https://alphaville.github.io">Pantelis Sopasakis</a><br />
 <a href="https://uclouvain.be/fr/repertoires/masoud.ahookhosh">Masoud Ahookhosh</a><br /></p>
 <h3>Former PhD students</h3>
 <p><a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a><br />
