--- a/people.html
+++ b/people.html
@@ -34,8 +34,8 @@
 </div>
 <h3>Current Postdocs</h3>
 <p><a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a><br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00112523">Andreas Themelis</a><br />
-<a href="https://scholar.google.com/citations?user=hjMg7-IAAAAJ&amp;hl=en">Miguel  Simoes</a><br /></p>
+<a href="https://scholar.google.com/citations?user=hjMg7-IAAAAJ&amp;hl=en">Miguel  Simoes</a><br />
+<a href="https://www.kuleuven.be/wieiswie/en/person/00112523">Andreas Themelis</a><br /></p>
 <h3>Current PhD students</h3>
 <p><a href="https://www.kuleuven.be/wieiswie/en/person/00104969">Peter Coppens</a><br />
 Brecht Evens<br />
