--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,9 @@
 </div>
 <h3>2020</h3>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/2010.02653.pdf">QPALM: A Proximal Augmented Lagrangian Method for Nonconvex Quadratic Programs</a><br /> 
+B. Hermans, A. Themelis, P. Patrinos</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/2005.10230.pdf">Douglas-Rachford splitting and ADMM for nonconvex optimization: Accelerated and Newton-type algorithms</a><br />
 A. Themelis, L. Stella, P. Patrinos</p>
 </li>
