--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,9 @@
 <li><p><a href="https://arxiv.org/pdf/2010.02653.pdf">QPALM: A Proximal Augmented Lagrangian Method for Nonconvex Quadratic Programs</a><br /> 
 B. Hermans, A. Themelis, P. Patrinos</p>
 </li>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2020.10.02.323501v1.full.pdf">Optimal versus approximate channel selection methods for EEG decoding with application to topology-constrained neuro-sensor networks</a><br />
+A.M. Narayanan, P. Patrinos, A. Bertrand</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/2005.10230.pdf">Douglas-Rachford splitting and ADMM for nonconvex optimization: Accelerated and Newton-type algorithms</a><br />
 A. Themelis, L. Stella, P. Patrinos</p>
 </li>
