--- a/publications.html
+++ b/publications.html
@@ -34,10 +34,19 @@
 </div>
 <h3>2020</h3>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/1906.10053.pdf">Block-coordinate and incremental aggregated nonconvex proximal gradient methods: a unified view</a><br />
+Mathematical Programming<br />
+P. Latafat, A. Themelis, P. Patrinos</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/1905.11904.pdf">Bregman forward-backward splitting for nonconvex composite optimization: superlinear convergence to nonisolated critical points</a><br />
+SIAM Journal on Optimization<br />
+M. Ahookhosh, A. Themelis, P. Patrinos</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/2010.02653.pdf">QPALM: A Proximal Augmented Lagrangian Method for Nonconvex Quadratic Programs</a><br /> 
 B. Hermans, A. Themelis, P. Patrinos</p>
 </li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2020.10.02.323501v1.full.pdf">Optimal versus approximate channel selection methods for EEG decoding with application to topology-constrained neuro-sensor networks</a><br />
+IEEE in Transactions on Neural Systems &amp; Rehabilitation Engineering<br />
 A.M. Narayanan, P. Patrinos, A. Bertrand</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2005.10230.pdf">Douglas-Rachford splitting and ADMM for nonconvex optimization: Accelerated and Newton-type algorithms</a><br />
@@ -63,7 +72,8 @@ P. Coppens and P. Patrinos</p>
 28th European Signal Processing Conference (EUSIPCO)<br />
 N. Vervliet, A. Themelis, P. Patrinos, and L. De Lathauwer</p>
 </li>
-<li><p><a href="https://homes.esat.kuleuven.be/~abertran/reports/JWmaxSPIR2020.pdf">Multi-pattern recognition through maximization of signal-to-peak-interference ratio with application to neural spike sorting</a><br />
+<li><p><a href="https://ieeexplore.ieee.org/document/9242265">Multi-pattern recognition through maximization of signal-to-peak-interference ratio with application to neural spike sorting</a><br />
+IEEE Transactions on Signal Processing, vol. 68, pp. 6240-6254, 2020<br />
 J. Wouters, P. Patrinos, F. Kloosterman and A. Bertrand</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2003.03963.pdf">A block inertial Bregman proximal algorithm for nonsmooth nonconvex problems with application to symmetric nonnegative matrix tri-factorization</a><br />
@@ -108,14 +118,8 @@ B. Hermans, A. Themelis, P. Patrinos</p>
 IEEE Transactions on Control Systems Technology<br />
 C.A. Hans, P. Sopasakis, J. Raisch, C. Reincke-Collon, P. Patrinos</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/1906.10053.pdf">Block-coordinate and incremental aggregated nonconvex proximal gradient methods: a unified view</a><br />
-P. Latafat, A. Themelis, P. Patrinos</p>
-</li>
 <li><p><a href="https://arxiv.org/pdf/1908.01402.pdf">Multi-block Bregman proximal alternating linearized minimization and its application to sparse orthogonal nonnegative matrix factorization</a><br />
 M. Ahookhosh, L.T.K. Hien, N. Gillis, P. Patrinos</p>
-</li>
-<li><p><a href="https://arxiv.org/pdf/1905.11904.pdf">Bregman forward-backward splitting for nonconvex composite optimization: superlinear convergence to nonisolated critical points</a><br />
-M. Ahookhosh, A. Themelis, P. Patrinos</p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8756205">Optimal dynamic spectrum management algorithms for multi-user full-duplex DSL</a><br />
 IEEE Access, vol. 7, pp. 106600-106616, 2019<br />
