--- a/publications.html
+++ b/publications.html
@@ -42,6 +42,9 @@ P. Latafat, A. Themelis, P. Patrinos</p>
 SIAM Journal on Optimization<br />
 M. Ahookhosh, A. Themelis, P. Patrinos</p>
 </li>
+<li><p><a href="https://arxiv.org/pdf/2011.12659.pdf">Unsupervised learning of disentangled representations in deep restricted kernel machines with orthogonality constraints</a><br />
+F. Tonin, P. Patrinos, J.A.K. Suykens</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/2010.02653.pdf">QPALM: A Proximal Augmented Lagrangian Method for Nonconvex Quadratic Programs</a><br /> 
 B. Hermans, A. Themelis, P. Patrinos</p>
 </li>
