--- a/people.html
+++ b/people.html
@@ -34,27 +34,29 @@
 </div>
 <h3>Current Postdocs</h3>
 <p><a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a><br />
-<a href="https://scholar.google.com/citations?user=hjMg7-IAAAAJ&amp;hl=en">Miguel  Simoes</a><br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00112523">Andreas Themelis</a><br /></p>
+<a href="https://scholar.google.com/citations?user=hjMg7-IAAAAJ&amp;hl=en">Miguel  Simoes</a><br /></p>
 <h3>Current PhD students</h3>
-<p><a href="https://www.kuleuven.be/wieiswie/en/person/00104969">Peter Coppens</a><br />
-Brecht Evens<br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00104126">Ben Hermans</a><br />
-Robin Kenis<br />
+<p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2308">Pourya Behmandpoor</a> (co-advised with <a href="https://www.esat.kuleuven.be/stadius/person.php?id=2">Marc Moonen</a>)<br />
+<a href="https://www.kuleuven.be/wieiswie/en/person/00104969">Peter Coppens</a> (co-advised with <a href="https://www.mech.kuleuven.be/en/pma/research/meco/people/00015548">Jan Swevers</a>)<br />
+<a href="https://homes.esat.kuleuven.be/~sistawww/it/stadius_redesign/person.php?id=2370">Brecht Evens</a><br />
+<a href="https://www.kuleuven.be/wieiswie/en/person/00104126">Ben Hermans</a> (co-advised with <a href="https://www.mech.kuleuven.be/en/pma/research/meco/people/00041257">Goele Pipeleers</a>)<br />
+<a href="https://homes.esat.kuleuven.be/~sistawww/it/stadius_redesign/person.php?id=2369">Robin Kenis</a>(co-advised with <a href="https://homes.esat.kuleuven.be/~sistawww/it/stadius_redesign/person.php?id=22">Lieven De Lathauwer</a>)<br />
+<a href="https://www.kuleuven.be/wieiswie/en/person/00142315">Teodor Rotaru</a> (co-advised with <a href="https://perso.uclouvain.be/francois.glineur/">Francois Glineur</a>)<br />
 <a href="https://www.kuleuven.be/wieiswie/en/person/00110604">Mathijs Schuurmans</a><br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00131918">Francesco Tonin</a> (co-promotor)<br /></p>
+<a href="https://www.kuleuven.be/wieiswie/en/person/00131918">Francesco Tonin</a> (co-advised with <a href="https://www.esat.kuleuven.be/sista/members/suykens.html">Johan Suykens</a>)<br /></p>
 <h3>Current master students</h3>
-<p>Pieter Pas<br />
-Matteo Janssen<br />
+<p>Matteo Janssen<br />
+Kemal Mahmuljin<br />
+Pieter Pas<br />
 Jan Scheers<br /></p>
 <h3>Former Postdocs</h3>
-<p><a href="https://alphaville.github.io">Pantelis Sopasakis</a><br />
-<a href="https://uclouvain.be/fr/repertoires/masoud.ahookhosh">Masoud Ahookhosh</a><br /></p>
+<p><a href="https://www.uantwerpen.be/en/staff/masoud-ahookhosh_22162/">Masoud Ahookhosh</a>, Assistant Professor, University of Antwerp<br />
+<a href="https://alphaville.github.io">Pantelis Sopasakis</a>, Lecturer,  Queen's University Belfast<br /></p>
 <h3>Former PhD students</h3>
 <p><a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a><br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00112523">Andreas Themelis</a><br />
+<a href="https://scholar.google.com/citations?user=DgXgGn0AAAAJ&amp;hl=it">Andreas Themelis</a>, Associate Professor, Kyushu University<br />
 <a href="https://lostella.github.io">Lorenzo Stella</a>, Amazon<br />
-Alberto Guiggiani, Ferrari<br /></p>
+<a href="https://www.linkedin.com/in/albertoguiggiani">Alberto Guiggiani</a>, Controls Design Engineer, Apple<br /></p>
 </td>
 </tr>
 </table>
