--- a/publications.html
+++ b/publications.html
@@ -32,16 +32,38 @@
 <h1>Panos Patrinos &ndash; Publications</h1>
 <div id="subtitle"><a href="https://www.esat.kuleuven.be/english/overview">Department of Electrical Engineering (ESAT)</a>, <a href="https://www.kuleuven.be/english/">KU Leuven</a></div>
 </div>
-<h3>2020</h3>
+<h3>2021</h3>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/1906.10053.pdf">Block-coordinate and incremental aggregated nonconvex proximal gradient methods: a unified view</a><br />
-Mathematical Programming<br />
+Mathematical Programming, pp. 1-30<br />
 P. Latafat, A. Themelis, P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/1905.11904.pdf">Bregman forward-backward splitting for nonconvex composite optimization: superlinear convergence to nonisolated critical points</a><br />
-SIAM Journal on Optimization<br />
+SIAM Journal on Optimization, vol. 31, no. 1, pp. 653-685<br />
 M. Ahookhosh, A. Themelis, P. Patrinos</p>
 </li>
+<li><p><a href="https://www.sciencedirect.com/science/article/pii/S0005109821000200">A penalty method for nonlinear programs with set exclusion constraints</a><br />
+Automatica, vol. 127, no. 109500<br />
+B. Hermans, G. Pipeleers, P. Patrinos</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2102.10312">Bregman Finito/MISO for nonconvex regularized finite sum minimization without Lipschitz gradient continuity</a><br />
+P. Latafat, A. Themelis, M. Ahookhosh, P. Patrinos </p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2103.14343">Neural network training as an optimal control problem: An augmented Lagrangian approach</a><br />
+B. Evens, P. Latafat, A. Themelis, J. Suykens, P. Patrinos </p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2103.03006">Data-driven distributionally robust MPC for constrained stochastic systems</a><br />
+P. Coppens, P. Patrinos</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2103.08533">Lasry-Lions envelopes and nonconvex optimization: A homotopy approach</a><br />
+M. Simoes, A. Themelis, P. Patrinos</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2102.08443">Unsupervised energy-based out-of-distribution detection using Stiefel-restricted kernel machine</a><br />
+F. Tonin, A. Pandey, P. Patrinos, J. Suykens</p>
+</li>
+</ul>
+<h3>2020</h3>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/2011.12659.pdf">Unsupervised learning of disentangled representations in deep restricted kernel machines with orthogonality constraints</a><br />
 F. Tonin, P. Patrinos, J.A.K. Suykens</p>
 </li>
