--- a/people.html
+++ b/people.html
@@ -36,7 +36,8 @@
 <p><a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a><br />
 <a href="https://scholar.google.com/citations?user=hjMg7-IAAAAJ&amp;hl=en">Miguel  Simoes</a><br /></p>
 <h3>Current PhD students</h3>
-<p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2308">Pourya Behmandpoor</a> (co-advised with <a href="https://www.esat.kuleuven.be/stadius/person.php?id=2">Marc Moonen</a>)<br />
+<p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2420">Jean-Pierre Allamaa</a><br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2308">Pourya Behmandpoor</a> (co-advised with <a href="https://www.esat.kuleuven.be/stadius/person.php?id=2">Marc Moonen</a>)<br />
 <a href="https://www.kuleuven.be/wieiswie/en/person/00104969">Peter Coppens</a> (co-advised with <a href="https://www.mech.kuleuven.be/en/pma/research/meco/people/00015548">Jan Swevers</a>)<br />
 <a href="https://homes.esat.kuleuven.be/~sistawww/it/stadius_redesign/person.php?id=2370">Brecht Evens</a><br />
 <a href="https://www.kuleuven.be/wieiswie/en/person/00104126">Ben Hermans</a> (co-advised with <a href="https://www.mech.kuleuven.be/en/pma/research/meco/people/00041257">Goele Pipeleers</a>)<br />
