--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,18 @@
 </div>
 <h3>2021</h3>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2103.03006">Data-driven distributionally robust MPC for constrained stochastic systems</a><br />
+IEEE Control Systems Letters<br />
+P. Coppens, P. Patrinos</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/2003.03963.pdf">A block inertial Bregman proximal algorithm for nonsmooth nonconvex problems with application to symmetric nonnegative matrix tri-factorization</a><br />
+Journal of Optimization Theory and Applications<br />
+M. Ahookhosh, L.T.K. Hien, N. Gillis and P. Patrinos</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/1908.01402.pdf">Multi-block Bregman proximal alternating linearized minimization and its application to sparse orthogonal nonnegative matrix factorization</a><br />
+Computational Optimization and Applications<br />
+M. Ahookhosh, L.T.K. Hien, N. Gillis, P. Patrinos</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/1906.10053.pdf">Block-coordinate and incremental aggregated nonconvex proximal gradient methods: a unified view</a><br />
 Mathematical Programming, pp. 1-30<br />
 P. Latafat, A. Themelis, P. Patrinos</p>
@@ -49,16 +61,20 @@ B. Hermans, G. Pipeleers, P. Patrinos</p>
 <li><p><a href="https://arxiv.org/abs/2102.10312">Bregman Finito/MISO for nonconvex regularized finite sum minimization without Lipschitz gradient continuity</a><br />
 P. Latafat, A. Themelis, M. Ahookhosh, P. Patrinos </p>
 </li>
+<li><p><a href="https://arxiv.org/abs/2106.00561">A General Framework for Learning-Based Distributionally Robust MPC of Markov Jump Systems</a><br />
+M. Schuurmans, P. Patrinos</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2105.02511">Data-driven distributionally robust control of partially observable jump linear systems</a><br />
+M. Schuurmans, P. Patrinos	</p>
+</li>
 <li><p><a href="https://arxiv.org/abs/2103.14343">Neural network training as an optimal control problem: An augmented Lagrangian approach</a><br />
 B. Evens, P. Latafat, A. Themelis, J. Suykens, P. Patrinos </p>
-</li>
-<li><p><a href="https://arxiv.org/abs/2103.03006">Data-driven distributionally robust MPC for constrained stochastic systems</a><br />
-P. Coppens, P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2103.08533">Lasry-Lions envelopes and nonconvex optimization: A homotopy approach</a><br />
 M. Simoes, A. Themelis, P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2102.08443">Unsupervised energy-based out-of-distribution detection using Stiefel-restricted kernel machine</a><br />
+International Joint Conference on Neural Networks (IJCNN), 2021<br />
 F. Tonin, A. Pandey, P. Patrinos, J. Suykens</p>
 </li>
 </ul>
@@ -101,9 +117,6 @@ N. Vervliet, A. Themelis, P. Patrinos, and L. De Lathauwer</p>
 IEEE Transactions on Signal Processing, vol. 68, pp. 6240-6254, 2020<br />
 J. Wouters, P. Patrinos, F. Kloosterman and A. Bertrand</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2003.03963.pdf">A block inertial Bregman proximal algorithm for nonsmooth nonconvex problems with application to symmetric nonnegative matrix tri-factorization</a><br />
-M. Ahookhosh, L.T.K. Hien, N. Gillis and P. Patrinos</p>
-</li>
 <li><p><a href="https://arxiv.org/pdf/1912.09990.pdf">Data-driven distributionally robust LQR with multiplicative noise</a><br />
 2nd Learning for Decision &amp; Control (L4DC) Conference, UC Berkeley, CA<br />
 P. Coppens, M. Schuurmans, P. Patrinos</p>
@@ -142,9 +155,6 @@ B. Hermans, A. Themelis, P. Patrinos</p>
 <li><p><a href="https://arxiv.org/abs/1809.06062">Risk-averse model predictive operation control of islanded microgrids</a><br />
 IEEE Transactions on Control Systems Technology<br />
 C.A. Hans, P. Sopasakis, J. Raisch, C. Reincke-Collon, P. Patrinos</p>
-</li>
-<li><p><a href="https://arxiv.org/pdf/1908.01402.pdf">Multi-block Bregman proximal alternating linearized minimization and its application to sparse orthogonal nonnegative matrix factorization</a><br />
-M. Ahookhosh, L.T.K. Hien, N. Gillis, P. Patrinos</p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8756205">Optimal dynamic spectrum management algorithms for multi-user full-duplex DSL</a><br />
 IEEE Access, vol. 7, pp. 106600-106616, 2019<br />
